--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
@@ -227,10 +227,11 @@
 			<div>
 			<% _.forOwn(orderedItems, function(item) { %>
 				<div style="padding:20px"> 
-					<b> Name </b> : <mark> <%- item.name %> </mark>  <br>
+					<b> Name </b> : <mark> <%- item.source %> : <%- item.name %> </mark>  <br>
 					<b> Original Price </b> : <mark> <%- item.originalPrice %> <%- item.currency %></mark>  <br>
 					<b> Sale Price </b> : <mark> <%- item.salePrice %> <%- item.currency %> </mark>  <br>
 					<b> Quantity </b> : <mark> <%- item.quantity %> </mark>  <br>
+					<b> Discount </b> : <mark> <%- item.discount %> <%- item.currency %>  <%- item.couponCode %> </mark>  <br>
 				</div>
 			<% }) %>
 			<div>
@@ -259,8 +260,9 @@
          <h5 class="media-heading"> <a target="_blank" rel="noreferrer" href="<%- srcTouchpoint.url %>" > <%- srcTouchpoint.name %> </a> </h5>
          <div class="text-nowrap " >  
 			<span class="small" > <b><i class="fa fa-info-circle" aria-hidden="true"></i> Transaction Data:</b> <br> 
-			<i class="fa fa-usd" aria-hidden="true"></i> ID Code: <mark> <%- transactionId %> </mark> <br>
-			<i class="fa fa-usd" aria-hidden="true"></i> Transaction Value: <mark> <%- transactionValue %> <%- transactionCurrency %> </mark>	
+			<i class="fa fa-usd" aria-hidden="true"></i> Transaction ID: <mark> <%- transactionId %> </mark> . Payment Information: <mark> <%- transactionPayment %> </mark> <br>
+			<i class="fa fa-usd" aria-hidden="true"></i> Transaction Value: <mark> <%- transactionValue %> <%- transactionCurrency %> </mark>
+			<i class="fa fa-usd" aria-hidden="true"></i> Discount Value: <mark> <%- transactionDiscount %> <%- transactionCurrency %> </mark>	
 		 </div>
 		 <div class="text-nowrap " >  
 			<i class="fa fa-link" aria-hidden="true"></i> <span class="small" ><%- srcTouchpoint.truncatedUrl %></span> <br> 
@@ -286,10 +288,11 @@
 			<div>
 			<% _.forOwn(orderedItems, function(item) { %>
 				<div style="padding:20px"> 
-					<b> Name </b> : <mark> <%- item.name %> </mark>  <br>
+					<b> Name </b> : <mark> <%- item.source %> : <%- item.name %> </mark>  <br>
 					<b> Original Price </b> : <mark> <%- item.originalPrice %> <%- item.currency %></mark>  <br>
 					<b> Sale Price </b> : <mark> <%- item.salePrice %> <%- item.currency %> </mark>  <br>
 					<b> Quantity </b> : <mark> <%- item.quantity %> </mark>  <br>
+					<b> Discount </b> : <mark> <%- item.discount %> <%- item.currency %>  <%- item.couponCode %> </mark>  <br>
 				</div>
 			<% }) %>
 			<div>
