--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
@@ -205,8 +205,8 @@
 		 </div>
 		 <div class="text-nowrap " >  
 			<span class="small" > <b><i class="fa fa-info-circle" aria-hidden="true"></i> Transaction Data:</b> <br> 
-			<i class="fa fa-usd" aria-hidden="true"></i> Transaction ID: <mark> <%- transactionId %> </mark> . Payment Information: <mark> <%- transactionPayment %> </mark> <br>
-			<i class="fa fa-usd" aria-hidden="true"></i> Transaction Value: <mark> <%- transactionValue %> <%- transactionCurrency %> </mark>
+			<i class="fa fa-usd" aria-hidden="true"></i> Transaction ID: <mark> <%- transactionId %> </mark> - Payment: <mark> <%- transactionPayment %> </mark> <br>
+			<i class="fa fa-usd" aria-hidden="true"></i> Transaction Value: <mark> <%- transactionValue %> <%- transactionCurrency %> </mark> <br>
 			<i class="fa fa-usd" aria-hidden="true"></i> Discount Value: <mark> <%- transactionDiscount %> <%- transactionCurrency %> </mark>	
 		 </div>
 		 <div class="text-nowrap " >  
@@ -266,9 +266,9 @@
          <h5 class="media-heading"> <a target="_blank" rel="noreferrer" href="<%- srcTouchpoint.url %>" > <%- srcTouchpoint.name %> </a> </h5>
          <div class="text-nowrap " >  
 			<span class="small" > <b><i class="fa fa-info-circle" aria-hidden="true"></i> Transaction Data:</b> <br> 
-			<i class="fa fa-usd" aria-hidden="true"></i> Transaction ID: <mark> <%- transactionId %> </mark> . Payment Information: <mark> <%- transactionPayment %> </mark> <br>
-			<i class="fa fa-usd" aria-hidden="true"></i> Transaction Value: <mark> <%- transactionValue %> <%- transactionCurrency %> </mark>
-			<i class="fa fa-usd" aria-hidden="true"></i> Discount Value: <mark> <%- transactionDiscount %> <%- transactionCurrency %> </mark>	
+			<i class="fa fa-usd" aria-hidden="true"></i> Transaction ID: <mark> <%- transactionId %> </mark> - Payment: <mark> <%- transactionPayment %> </mark> <br>
+			<i class="fa fa-usd" aria-hidden="true"></i> Transaction Value: <mark> <%- transactionValue %> <%- transactionCurrency %> </mark> <br>
+			<i class="fa fa-usd" aria-hidden="true"></i> Discount Value: <mark> <%- transactionDiscount %> <%- transactionCurrency %> </mark>
 		 </div>
 		 <div class="text-nowrap " >  
 			<i class="fa fa-link" aria-hidden="true"></i> <span class="small" ><%- srcTouchpoint.truncatedUrl %></span> <br> 
