--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
@@ -34,6 +34,9 @@
 	#cx_qrImgSrc {
 		max-height: 268px;
 	}
+	.dataTable td, .dataTable th {
+		text-align: center !important;
+	}
 </style>
 
 <!-- Templates for customer-journey-flow.html -->
