--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
@@ -46,13 +46,6 @@
 	  overflow: hidden;
 	  text-overflow: ellipsis; 
 	}
-	#profileInSegments mark {
-		margin-left: 3px;
-		border-radius: 8px;
-	}
-	#profileInSegments a {
-		color: #0000CD!important;
-	}
 	ol.profile_ext_data {
 		margin-left: 28px;
 	}
@@ -86,6 +79,12 @@
 	.btn-import-data {
 		background-color: #FBF95A; color: black; border:solid 1px black;
 	} 
+	.btn-taxonomy {
+	    color: #3300ff;
+	    background-color: #ECECEC;
+	    border-color: #BBBBBB;
+	    margin-top: 5px;
+	}
 
 </style>
 
