--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
@@ -206,6 +206,8 @@
 		 <div class="text-nowrap" style="display: <%- cssStyleDisplayTransaction %>" >  
 			<span class="small" > <b><i class="fa fa-info-circle" aria-hidden="true"></i> Transaction Data:</b> <br> 
 			<i class="fa fa-usd" aria-hidden="true"></i> Transaction ID: <mark> <%- transactionId %> </mark> - Payment: <mark> <%- transactionPayment %> </mark> <br>
+			<i class="fa fa-info" aria-hidden="true"></i> Status: <mark> <%- transactionStatus %> </mark> <br>
+			
 			<i class="fa fa-usd" aria-hidden="true"></i> Transaction Value: <mark> <%- transactionValue %> <%- transactionCurrency %> </mark> <br>
 			<i class="fa fa-usd" aria-hidden="true"></i> Discount Value: <mark> <%- transactionDiscount %> <%- transactionCurrency %> </mark>	
 		 </div>
@@ -267,7 +269,8 @@
          <div class="text-nowrap" style="display: <%- cssStyleDisplayTransaction %>" >  
 			<i class="fa fa-commenting-o" aria-hidden="true"></i> Message: <mark> <%- message %> </mark> <br>
 			<span class="small" > <b><i class="fa fa-info-circle" aria-hidden="true"></i> Transaction Data:</b> <br> 
-			<i class="fa fa-usd" aria-hidden="true"></i> Transaction ID: <mark> <%- transactionId %> </mark> - Status: <mark> <%- transactionStatus %> </mark><br>
+			<i class="fa fa-usd" aria-hidden="true"></i> Transaction ID: <mark> <%- transactionId %> </mark> - Payment: <mark> <%- transactionPayment %> </mark> <br>
+			<i class="fa fa-info" aria-hidden="true"></i> Status: <mark> <%- transactionStatus %> </mark> <br>
 			<i class="fa fa-usd" aria-hidden="true"></i> Transaction Value: <mark> <%- transactionValue %> <%- transactionCurrency %> </mark> - Payment: <mark> <%- transactionPayment %> </mark> <br>
 			<i class="fa fa-usd" aria-hidden="true"></i> Discount Value: <mark> <%- transactionDiscount %> <%- transactionCurrency %> </mark>
 		 </div>
