--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
@@ -408,7 +408,6 @@
   </div>
 </script>
 
-
 <script id='purchased-product-tpl' type="text/html" >
  <div class="list-group-item col-md-12" id="purchased_item_<%- key %>" data-key="<%- key %>" >
 	<div class="col-md-2 text-center"> 
@@ -417,6 +416,7 @@
 	 <div class="col-md-10">
 		<small class="text-muted pull-right"> Transaction Date: <%- createdAt %> </small>
  		<div class="text-nowrap" > 
+			<i class="fa fa-info" aria-hidden="true"></i> Product Code : <b> <%- product.productCode %> </b> <br>
 			<i class="fa fa-info" aria-hidden="true"></i> Product <%- product.productIdType %> : <b> <%- product.productId %> </b> <br>
 			<h5 class="media-heading">  <%- product.title %> </h5> 
 			<span class="small item_link" > <a target="_blank" rel="noreferrer" href="<%- product.fullUrl %>" > <%- product.fullUrl %> </a>  </span> <br>
