--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
@@ -621,7 +621,7 @@
             </div>
 			<div class="modal-body">
                 <div class="alert alert-info">
-                    <h4> <i class="fa fa-question-circle-o" aria-hidden="true"></i>  Do you want to do data deduplication ? </h4>
+                    <h4> <i class="fa fa-question-circle-o" aria-hidden="true"></i> Would you like to deduplicate your data? </h4>
                 </div>
             </div>
             <div class="modal-footer">
