--- a/resources/app-templates/leocdp-admin/templates/tpl-analytics-dashboard.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-analytics-dashboard.html
@@ -59,6 +59,9 @@ div.download_link_holder {
 .modal-xl {
 	width: 1180px; margin: auto;
 }
+#page_breadcrumb {
+	font-weight:bold;
+}
 </style>
 
 <script id='survey-report-item-tpl' type="text/html" >
